# Unique_Word_conter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  execute.sh
doc/: Descp.txt
include/: file_reading.hpp  thread_handler.hpp  thread_pool.hpp  word_processing.hpp
src/: CMakeLists.txt  file_reading.cpp  main.cpp  thread_handler.cpp  thread_pool.cpp  word_processing.cpp
tests/: CMakeLists.txt  big_test_file.txt  small_test_file.txt
